--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,18 @@
 <resources>
     <string name="app_name">mushroom</string>
+    <string name="tabBaked">อบ</string>
+    <string name="tabPlant">เพาะ</string>
+
     <string name="txtBaked">1.อบ</string>
     <string name="txtPlant">2.เพาะเห็ด</string>
     <string name="txtStatus">3.ดูสถานะ</string>
     <string name="txtHistory">4.ดูย้อนหลัง</string>
     <string name="ok">OK</string>
     <string name="cancel">CANCEL</string>
+
+    <string-array name="spinner">
+        <item>เลือก</item>
+        <item>อบ</item>
+        <item>เพาะ</item>
+    </string-array>
 </resources>
